Implemented keycloak successfully