@@ -1,23 +1,44 @@
 package com.ttpl.config;
 
+import io.swagger.v3.oas.annotations.enums.SecuritySchemeType;
+import io.swagger.v3.oas.annotations.security.OAuthFlow;
+import io.swagger.v3.oas.annotations.security.OAuthFlows;
+import io.swagger.v3.oas.annotations.security.OAuthScope;
+import io.swagger.v3.oas.annotations.security.SecurityScheme;
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
+@SecurityScheme(
+        name = "keycloak",
+        type = SecuritySchemeType.OAUTH2,
+        flows = @OAuthFlows(
+                password = @OAuthFlow(
+                        tokenUrl = "http://localhost:8085/realms/college-student-demo/protocol/openid-connect/token",
+                        scopes = {
+                                @OAuthScope(name = "profile", description = "Access profile information"),
+                                @OAuthScope(name = "email", description = "Access email information")
+                        }
+                )
+        )
+)
 public class SwaggerConfig {
 
     @Bean
     public OpenAPI customOpenAPI() {
         return new OpenAPI()
-                .servers(List.of(
+                .addSecurityItem(new SecurityRequirement().addList("keycloak"))
+                .components(new Components())
+                .servers(Arrays.asList(
                         new Server()
                                 .url("http://localhost:8080")
                                 .description("API Gateway")
                 ));
     }
-
 }
